--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
 name = "networth"
-version = "0.2.3"
+version = "0.2.4"
 requires-python = ">=3.13"
 dependencies = [
-    "aioetherscan>=0.9.4",
-    "aiohttp>=3.12.1",
-    "click>=8.2.1",
-    "finnhub-python>=2.4.23",
-    "pycoingecko>=3.2.0",
-    "python-decouple>=3.8",
-    "pyyaml>=6.0.2",
+    "aioetherscan==0.9.4",
+    "aiohttp==3.12.13",
+    "click==8.2.1",
+    "finnhub-python==2.4.23",
+    "pycoingecko==3.2.0",
+    "python-decouple==3.8",
+    "pyyaml==6.0.2",
 ]
 
 [tool.black]
