--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "networth"
-version = "0.2.5"
+version = "0.2.6"
 requires-python = ">=3.13"
 dependencies = [
     "aioetherscan==0.9.4",
@@ -10,6 +10,7 @@ dependencies = [
     "pycoingecko==3.2.0",
     "python-decouple==3.8",
     "pyyaml==6.0.2",
+    "tenacity>=9.1.2",
 ]
 
 [tool.black]
