--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [project]
 name = "networth"
 version = "0.2.7"
-requires-python = ">=3.13"
+requires-python = ">=3.14"
 dependencies = [
-    "click==8.2.1",
-    "finnhub-python==2.4.24",
+    "click==8.3.1",
+    "finnhub-python==2.4.25",
     "pycoingecko==3.2.0",
     "python-decouple==3.8",
-    "pyyaml==6.0.2",
-    "requests>=2.32.5",
-    "tenacity>=9.1.2",
+    "pyyaml==6.0.3",
+    "requests==2.32.5",
+    "tenacity==9.1.2",
 ]
 
 [tool.black]
 line-length = 150
-target-version = ['py313']
+target-version = ['py314']
